added crawl page

--- a/starWarsPeople.html
+++ b/starWarsPeople.html
@@ -17,11 +17,18 @@
     <link rel="stylesheet" type="text/css" media="screen" href="swpeople.css" />
   </head>
   <body>
+      <nav>
+          <ul id="navbar">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./crawls.html">Film Crawls</a></li>
+          </ul>
+        </nav>
     <header class="character">Star Wars Characters</header>
     <div class="container"></div>
     <button class="button">Create New Star Wars Character</button>
     <footer>
-      <p class='footer'>For educational purposes only by Maisie Wells</p>
+        <p class="footer">&copy; Created by <a target="_blank">Maisie Wells 2019</a></p>
+      <!-- <p class='footer'>For educational purposes only by Maisie Wells</p> -->
     </footer>
     <script type="module" src="swpeople.js"></script>
   </body>
