--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
 
-  <!-- <title>Maisie's Personal Portfolio</title>
-  <meta name="description" content="Maisie's Personal Portfolio"> -->
+<title class="title">Maisie's Personal Portfolio</title>
+<meta name="description" content="Maisie's Personal Portfolio">
+
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="./main.css">
@@ -14,25 +15,24 @@
 
 <body>
     <nav>
-        <ul id='navbar'>
+        <ul id="navbar">
           <li><a href="#welcome-section">About</a></li>
           <li><a href="#projects">Work</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="./starWarsPeople.html">Starwars</a></li>
+          <li><a href="./crawls.html">Film Crawls</a></li>
         </ul>
       </nav>
 
-      <div id="welcome-section" class="intro">
 
-        <!-- <h1 class="title">Hey I'm Maisie</h1>
-        <p class="crawl">A Web Developer</p> -->
-        <div class="starwars">
+      <div id="welcome-section" class="title">
 
-        </div>
-
-
+          <h1 class="header">Hey I'm Maisie</h1>
+          <p class="sub">A Web Developer</p>
 
       </div>
+
+
       <div id="projects" class="work">
         <h2 class="work-header">These are some of my projects..</h2>
         <a href="https://10778648.wixsite.com/maisiewells" target="_blank" class="project project-tile">
