--- a/starWarsPeople.html
+++ b/starWarsPeople.html
@@ -18,7 +18,7 @@
   </head>
   <body>
       <nav>
-          <ul id="navbar">
+          <ul class="navbar">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./crawls.html">Film Crawls</a></li>
           </ul>
@@ -27,9 +27,8 @@
     <div class="container"></div>
     <button class="button">Create New Star Wars Character</button>
     <footer>
-        <p class="footer">&copy; Created by <a target="_blank">Maisie Wells 2019</a></p>
-      <!-- <p class='footer'>For educational purposes only by Maisie Wells</p> -->
-    </footer>
+        <p>&copy; Created by <a target="_blank">Maisie Wells 2019</a></p>
+      </footer>
     <script type="module" src="swpeople.js"></script>
   </body>
 </html>
