--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div id="projects" class="work">
         <h2 class="work-header">These are some of my projects..</h2>
         <a href="https://10778648.wixsite.com/maisiewells" target="_blank" class="project project-tile">
-          <img class="project-pic" src="./images/antelopejpg.jpg" alt="antelope island">
+          <img class="project-pic" src="./images/antelope.jpg" alt="antelope island">
           <div class="project-title">Antelope Island</div>
         </a>
         <a href="https://10778648.wixsite.com/maisiewells" target="_blank" class="project project-tile">
