home pg changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
       <div id="projects" class="work">
-        <h2 class="work-header">These are some of my projects..</h2>
+        <h2 class="work-header">These are some of my projects</h2>
         <a href="https://10778648.wixsite.com/maisiewells" target="_blank" class="project project-tile">
           <img class="project-pic" src="./images/antelope.jpg" alt="antelope island">
           <div class="project-title">Antelope Island</div>
@@ -58,9 +58,9 @@
 
       </div>
       <div id="contact" class="contact">
-        <div class="header">
+        <div class="collab">
           <h1>Wanna Collaborate?</h1>
-          <p>Let's do this thing...</p>
+          <p class="bus"></p>Let's do this thing...</p>
         </div>
         <a href="https://www.facebook.com/doterra/" target="_blank" class="contact-details">Facebook</a>
         <a id='profile-link' href="https://github.com/maisiejwells" target="_blank" class="contact-details">GitHub</a>
