--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <a href="https://www.facebook.com/doterra/" target="_blank" class="contact-details">Facebook</a>
         <a id='profile-link' href="https://github.com/maisiejwells" target="_blank" class="contact-details">GitHub</a>
-        <a href="sweetsunshine@gmail.com" class="contact-details">Email</a>
+        <a href="10778648@myuvu.edu" class="contact-details">Email</a>
         <a href="tel:876-983-4102" class="contact-details">Voicemail</a>
       </div>
       <footer>
